--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -371,7 +371,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
           span {margin:0 0 0 -5px; font-size:9px;}
       }
       .top-nav {position:static; width:79%; right:0; margin:0; float:right;
-        a,a:hover {margin:0; width:50%; padding:0; font-size:9px;
+        a,a:hover {margin:0; width:50%; padding:0; font-size:9px; display:inline-block;
           .fa {display:block; margin: 0 0 7px 0; padding-top: 7px;}
         }
         a:first-child {border-right:1px solid #666666;border-left:1px solid #666666;}
