--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -58,4 +58,6 @@
 
 </script>
 
+<script type="text/javascript">(function(){var sb=document.createElement('script');sb.type='text/javascript';sb.async=true;sb.src='https://s3.amazonaws.com/z_437er23a/f9b2782c2.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(sb,s);})();</script>
+
 </head>
