banners and search

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,105 +1,119 @@
 <% if @location.present? and @location.gallery.present? and @location.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
     <% @location.gallery.items.reorder('position ASC').each do |item| %>
-    <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
-      <div class="ms-slide slide-1" data-delay="4">
-        <div class="overlay"></div>        
-        <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <% if @location.depth == 0 %>
-            <h2>Discover</h2>
-          <% end %>
-          <h1><%= raw @location.name %></h1>
-          <h3><%= @location.sub_name %></h3>
+      <% if item.image.present? %>
+        <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
+        <div class="ms-slide slide-1" data-delay="4">
+          <div class="overlay"></div>
+          <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <% if @location.depth == 0 %>
+              <h2>Discover</h2>
+            <% end %>
+            <h1><%= raw @location.name %></h1>
+            <h3><%= @location.sub_name %></h3>
+          </div>
+          <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
-        <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @accommodation.present? and @accommodation.gallery.present? and @accommodation.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
     <% @accommodation.gallery.items.reorder('position ASC').each do |item| %>
-    <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
-      <div class="ms-slide slide-1" data-delay="4">
-        <div class="overlay"></div>
-        <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2>Visit</h2>
-          <h1><%= raw @accommodation.name %></h1>
-          <h1><%= @accommodation.sub_name %></h1>
+      <% if item.image.present? %>
+        <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
+        <div class="ms-slide slide-1" data-delay="4">
+          <div class="overlay"></div>
+          <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <h2>Visit</h2>
+            <h1><%= raw @accommodation.name %></h1>
+            <h1><%= @accommodation.sub_name %></h1>
+          </div>
+          <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
-        <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @activity.present? and @activity.gallery.present? and @activity.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
     <% @activity.gallery.items.reorder('position ASC').each do |item| %>
-      <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
-      <div class="ms-slide slide-1" data-delay="4">
-        <div class="overlay"></div>
-        <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2>Experience</h2>
-          <h1><%= raw @activity.name %></h1>
-          <h3><%= @activity.sub_name %></h3>
+      <% if item.image.present? %>
+        <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
+        <div class="ms-slide slide-1" data-delay="4">
+          <div class="overlay"></div>
+          <%= image_fu(item.image, "1920x935#c", :alt => item.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <h2>Experience</h2>
+            <h1><%= raw @activity.name %></h1>
+            <h3><%= @activity.sub_name %></h3>
+          </div>
+          <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
-        <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @post.present? and @post.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
     <% @post.banners.published.reorder('position ASC').each do |banner| %>
-      <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
-      <div class="ms-slide slide-1" data-delay="4">
-        <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h1><%= raw banner.name %></h1>
+      <% if banner.image.present? %>
+        <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
+        <div class="ms-slide slide-1" data-delay="4">
+          <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <h1><%= raw banner.name %></h1>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @page.link_url.present? and @page.link_url == '/blog' and @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
     <% @page.banners.published.reorder('position ASC').each do |banner| %>
-      <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-cream.png"></div>
-      <div class="ms-slide slide-1" data-delay="4">
-        <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2><%= raw banner.name %></h2>
+      <% if banner.image.present? %>
+        <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-cream.png"></div>
+        <div class="ms-slide slide-1" data-delay="4">
+          <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <h2><%= raw banner.name %></h2>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @page.link_url.present? and @page.link_url == '/bookings/new' and @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
     <% @page.banners.published.reorder('position ASC').each do |banner| %>
-      <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
-      <div class="ms-slide slide-1" data-delay="4">
-        <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
-        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <h2><%= raw banner.name %></h2>
+      <% if banner.image.present? %>
+        <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
+        <div class="ms-slide slide-1" data-delay="4">
+          <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
+          <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <h2><%= raw banner.name %></h2>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 <% elsif @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
       <% @page.banners.published.reorder('position ASC').each do |banner| %>
-        <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
-        <div class="ms-slide slide-1" data-delay="4">
-          <div class="overlay"></div>
-          <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
-          <% if home_page? %>
-            <img src="/assets/blank.gif" data-src="/assets/logo.png" class="ms-layer logo" data-type="image" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <% elsif banner.description.present? %>
-            <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-              <%= raw banner.description %>
-            </div>
-          <% end %>
-          <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
-        </div>
+        <% if banner.image.present? %>
+          <a href="#welcome"><div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay-scroll.png"></div></a>
+          <div class="ms-slide slide-1" data-delay="4">
+            <div class="overlay"></div>
+            <%= image_fu(banner.image, "1920x935#c", :alt => banner.image.alt_tag) %>
+            <% if home_page? %>
+              <img src="/assets/blank.gif" data-src="/assets/logo.png" class="ms-layer logo" data-type="image" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+            <% elsif banner.description.present? %>
+              <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+                <%= raw banner.description %>
+              </div>
+            <% end %>
+            <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
+          </div>
+        <% end %>
       <% end %>
   </div>
 <% end %>
