--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -25,7 +25,7 @@
                   <ul>
                     <% @all_locations.each do |location| %>
                       <li>
-                        <%= link_to location.name, location_link(location) %>
+                        <%= link_to strip_tags(location.name), location_link(location) %>
                       </li>
                     <% end %>
                   </ul>
@@ -33,10 +33,12 @@
                 <% if @all_accommodations.present? %>
                   <h3>Accommodations</h3>
                   <ul>
-                    <% @all_locations.each do |accommodation| %>
-                      <li>
-                        <%= link_to accommodation.name, refinery.accommodations_accommodation_path(accommodation) %>
-                      </li>
+                    <% @all_accommodations.each do |accommodation| %>
+                      <% if accommodation.is_valid? %>
+                        <li>
+                          <%= link_to strip_tags(accommodation.name), refinery.accommodations_accommodation_path(accommodation) %>
+                        </li>
+                      <% end %>
                     <% end %>
                   </ul>
                 <% end %>
@@ -58,7 +60,7 @@
                 <ul>
                   <% @locations.each do |location| %>
                     <li>
-                      <%= link_to location.name, location_link(location) %>
+                      <%= link_to strip_tags(location.name), location_link(location) %>
                     </li>
                   <% end %>
                 </ul>
