--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -27,7 +27,7 @@
                       <li class="search-item">
                         <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag),refinery.locations_location_path(location)) if location.cover_image.present? %>
                         <div class="search-item-body">
-                          <h3><%= link_to location.name, refinery.locations_location_path(location) %></h3>
+                          <h3><%= link_to strip_tags(location.name), refinery.locations_location_path(location) %></h3>
                           <div class="description"><%=raw truncate(location.description, :length => 120) %></div>
                         </div>
                       </li>
@@ -43,7 +43,7 @@
                         <li class="search-item">    
                           <%= link_to(image_fu(accommodation.cover_image, "105x80#c", :alt => accommodation.cover_image.alt_tag),refinery.accommodations_accommodation_path(accommodation)) if accommodation.cover_image.present? %>               
                           <div class="search-item-body">
-                            <h3><%= link_to accommodation.name, refinery.accommodations_accommodation_path(accommodation) %></h3>
+                            <h3><%= link_to strip_tags(accommodation.name), refinery.accommodations_accommodation_path(accommodation) %></h3>
                             <div class="description"><%=raw truncate(accommodation.description, :length => 120) %></div>
                           </div>
                         </li>
