--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -44,6 +44,25 @@
   <script type="text/javascript">stLight.options({publisher: "cef80a77-07e3-4913-804d-0d3aef60ac1f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
+  <!--Start of Zendesk Chat Script-->
+
+  <script type="text/javascript">
+      window.$zopim||(function(d,s){var z=$zopim=function(c){
+
+          z._.push(c)},$=z.s=
+
+          d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+
+      _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+
+          $.src='https://v2.zopim.com/?4YhqxoKNUibtYGBbD623ryOL2IpABghB';z.t=+new Date;$.
+
+              type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+
+  </script>
+
+  <!--End of Zendesk Chat Script-->
+
 <script>
 
 (function(h,o,t,j,a,r){
