--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@
 
 .clear {clear:both;}
 
-.div1,.div2,.div3 { opacity:0; filter:alpha(opacity=0); }
+//.div1,.div2,.div3 { opacity:0; filter:alpha(opacity=0); }
 
 body { @include main_font(); font-size:14px; line-height:28px; overflow-x:hidden; text-align:center;margin:0px; padding:0px; }
 body.modal-open {overflow:auto; margin-right:0!important; transform:none!important;}
@@ -373,6 +373,8 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   ul,p {width:auto; font-size: 12px; line-height: 20px;}
 }
 
+
+
 /*** xs ***/
 @media (max-width:767px) {
   .container {max-width:340px;}
@@ -413,7 +415,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h1 {line-height:30px; margin:30px 0;}
   h2 {line-height:24px; margin:30px 0;}
   h3 {line-height:24px; margin:30px 0;}
-  .div1,.div2,.div3 {opacity:1;}
+  //.div1,.div2,.div3 {opacity:1;}
   h1,h2,p,ul {width:100%!important;}
   .read_more {margin: 30px auto; display: block;} 
   #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0!important;}
@@ -502,4 +504,20 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** lg ***/
 @media (min-width: 1200px) {
   .container {width: 1170px;}
+}
+
+.read_more_content{
+  background: #fff!important;
+  border: 1px solid #333!important;
+  color: #333!important;
+  height: 38px!important;
+  line-height: 38px!important;
+}
+
+.read_more_content2{
+  background: #fff!important;
+  border: 1px solid #333!important;
+  color: #333!important;
+  height: 38px!important;
+  line-height: 38px!important;
 }
