--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -84,7 +84,7 @@
       <div id="welcome">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 div1">
+            <div class="col-xs-12 div1 truncate_text">
                 <%=raw @location.description %>
             </div>
             <div class="col-xs-12">
@@ -209,8 +209,8 @@
       <div id="welcome">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 div1">
-            <%=raw @location.description %>
+          <div class="col-xs-12 div1 truncate_text">
+            <%= raw(@location.description) %>
           </div>
           <div class="col-xs-12">
             <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Enquire Now</a>
