--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,7 @@ h1.accommodation-name {position: absolute; z-index: 6; width: 100%; @include sli
 a,a:hover,a:focus {color:#000000; text-decoration:none;}
 
 p,ul,ol {width:740px; text-align:justify; margin:0 auto 30px auto;}
+p.click {text-align: center;margin-top: -40px;}
 
 ul {text-align:left;}
 
