--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -142,7 +142,8 @@
           <div class="locations">
             <div class="row">
               <div class="col-xs-12">
-                <h2>Truly Special Locations</h2>
+                <h2>Explore the regions below</h2>
+                <p class="click">Please click on each circle</p>
                 <p><%=raw @location.side_body %></p>
                 <div id="locations_slider">
                   <% child_locations.each do |child| %>
@@ -267,7 +268,8 @@
           <div class="accommodations">
             <div class="row">
               <div class="col-xs-12">
-                <h2 id="camps">Camps / Lodges</h2>
+                <h2 id="camps">Explore the camps below</h2>
+                <p class="click">Please click on each circle</p>
                 <div id="accommodations_slider">
                   <% accommodations.each do |accommodation| %>
                     <div class="slide">
