--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -24,7 +24,7 @@
                 <ul>
                   <% @activities.each do |activity| %>
                   <li>
-                    <h3><%= link_to activity.name, refinery.activities_activity_path(activity) %></h3>
+                    <%= link_to activity.name, refinery.activities_activity_path(activity) %>
                   </li>
                   <% end %>
                 </ul>
@@ -48,15 +48,14 @@
         </div>
       </div>
 
-      <% accommodations = Refinery::Accommodations::Accommodation.all %>
-      <% if accommodations.present? %>
+      <% if @activity.accommodations.present? %>
         <div class="accommodations">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
                 <h1>Popular Lodges</h1>
                 <div id="accommodations_slider">
-                  <% accommodations.each do |accommodation| %>
+                  <% @activity.accommodations.each do |accommodation| %>
                     <div class="slide">
                       <%= link_to refinery.accommodations_accommodation_path(accommodation)  do %>                        
                         <%= image_fu accommodation.cover_image, "300x175#c", :alt => accommodation.cover_image.alt_tag if accommodation.cover_image.present? %>
@@ -71,15 +70,14 @@
         </div>
       <% end %>
 
-    <% locations = Refinery::Locations::Location.all %>
-    <% if locations.present? %>
+    <% if @activity.locations.present? %>
       <div class="locations">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
               <h1>Popular Places</h1>
               <div id="locations_slider">
-                <% locations.each do |location| %>
+                <% @activity.locations.each do |location| %>
                     <div class="slide">
                       <%= link_to location_link(location)  do %>                        
                         <%= image_fu location.cover_image, "300x175#c", :alt => location.cover_image.alt_tag if location.cover_image.present? %>
