--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -360,7 +360,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
-#locations.search {
+#locations.search,#activities.search {
   .search-item {width: 48%; float: left; margin: 0 10px 20px 10px; border: 1px solid #e7e7e7; padding: 10px 10px 0 10px;
     h1 {display:none;}
     h3 {margin:0; height:30px; overflow:hidden;}
