--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -20,6 +20,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 div1">
+                <h1>Experiences</h1>
                   <ul class=" list-inline list-unstyled">
                     <% @activities.each do |activity| %>
                       <li class="search-item">
