--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -20,11 +20,11 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 div1">
-                <h1>Experiences</h1>
+                <h1 style="padding-top:20px;">Experiences</h1>
                   <ul class=" list-inline list-unstyled">
                     <% @activities.each do |activity| %>
                       <li class="search-item">
-                        <%= link_to(image_fu(activity.cover_image, "105x80#c", :alt => activity.cover_image.alt_tag),refinery.activities_activity_path(activity)) if activity.cover_image.present? %>
+                        <%= link_to(image_fu(activity.cover_image, "105x", :alt => activity.cover_image.alt_tag),refinery.activities_activity_path(activity)) if activity.cover_image.present? %>
                         <div class="search-item-body">
                           <h3><%= link_to strip_tags(activity.name), refinery.activities_activity_path(activity) %></h3>
                           <div class="description"><%=raw truncate(activity.description, :length => 120) %></div>
