--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -372,6 +372,12 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   ul,p {width:auto; font-size: 12px; line-height: 20px;}
 }
 
+.locations-activities {background: #808080; padding-bottom: 50px;color:#ffffff;
+    h2 {color:#ffffff;}
+    a {color:#ffffff;}
+    img {border-radius:50%;}
+}
+
 
 
 /*** xs ***/
