--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -60,7 +60,8 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>Popular Lodges</h1>
+                <h2>Popular Lodges</h2>
+                <p class="click">Please click on each circle</p>
                 <div id="accommodations_slider">
                   <% @activity.accommodations.each do |accommodation| %>
                     <div class="slide">
@@ -82,7 +83,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h1>Popular Places</h1>
+              <h2>Popular Places</h2>
+              <p class="click">Please click on each circle</p>
               <div id="locations_slider">
                 <% @activity.locations.each do |location| %>
                     <div class="slide">
