--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -56,18 +56,18 @@
       </div>
 
       <% if @activity.accommodations.present? %>
-        <div class="accommodations">
+        <div class="accommodations-activities">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h2>Popular Lodges</h2>
+                <h1>Popular Lodges</h1>
                 <p class="click">Please click on each circle</p>
                 <div id="accommodations_slider">
                   <% @activity.accommodations.each do |accommodation| %>
                     <div class="slide">
                       <%= link_to refinery.accommodations_accommodation_path(accommodation)  do %>                        
-                        <%= image_fu accommodation.cover_image, "300x175#c", :alt => accommodation.cover_image.alt_tag if accommodation.cover_image.present? %>
-                        <%= accommodation.name %>
+                        <%= image_fu accommodation.cover_image, "165x165#c", :alt => accommodation.cover_image.alt_tag if accommodation.cover_image.present? %>
+                        <%= raw accommodation.name %>
                       <% end %>
                     </div>
                   <% end %>
@@ -83,7 +83,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <h2>Popular Places</h2>
+              <h1>Popular Places</h1>
               <p class="click">Please click on each circle</p>
               <div id="locations_slider">
                 <% @activity.locations.each do |location| %>
