--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -378,6 +378,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
     a {color:#ffffff;}
     img {border-radius:50%;}
 }
+.accommodations-activities {border: 1px solid rgba(255,255,255,0.1);}
 
 
 
