--- a/app/views/refinery/blog/shared/_post.html.erb
+++ b/app/views/refinery/blog/shared/_post.html.erb
@@ -15,10 +15,11 @@
         <% end %>
       </div>
 
-    </div><div class="clear"></div>
+    </div>
   </div>
 
   </article>
 <% end %>
+<div class="clear"></div>
 
 
