--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -24,7 +24,7 @@
                   <ul class=" list-inline list-unstyled">
                     <% @activities.each do |activity| %>
                       <li class="search-item">
-                        <%= link_to(image_fu(activity.cover_image, "80x", :alt => activity.cover_image.alt_tag),refinery.activities_activity_path(activity)) if activity.cover_image.present? %>
+                        <%= link_to(image_fu(activity.image, "80x80#c", :alt => activity.image.alt_tag),refinery.activities_activity_path(activity)) if activity.image.present? %>
                         <div class="search-item-body">
                           <h3><%= link_to strip_tags(activity.name), refinery.activities_activity_path(activity) %></h3>
                           <div class="description"><%=raw truncate(activity.description, :length => 120) %></div>
